# LiquidAILocal

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
app/: __init__.py
app/docs/: readme.md
app/src/: __init__.py  app.py
app/src/api/: __init__.py  routes.py
app/src/config/: __init__.py  settings.py
app/src/models/: __init__.py  llm_service.py
app/static/css/: docs.css  styles.css
app/static/js/: main.js
app/templates/: api_docs.html  index.html
tests/: test_app.py
